--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pg": "^8.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
