--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.8.0",
     "@supabase/supabase-js": "^2.50.2",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
