--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "bcryptjs": "^3.0.2",
     "motion": "^12.19.2",
     "next": "15.3.4",
+    "pdf-poppler": "^0.2.1",
     "pg": "^8.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
+    "tesseract.js": "^6.0.1",
     "uid": "^2.0.2"
   },
   "devDependencies": {
