--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@google/genai": "^1.8.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.50.2",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "motion": "^12.19.2",
     "next": "15.3.4",
     "pdf-poppler": "^0.2.1",
@@ -21,6 +25,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
+    "tailwind-merge": "^3.3.1",
     "tesseract.js": "^6.0.1",
     "uid": "^2.0.2"
   },
@@ -33,6 +38,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
